# big-rs

./: .gitignore  Cargo.toml  README.md  WATCH_MODE.md  code-review.md  example.sh  issues.md
example-preso/: big-navigation.js  big-theme.css
src/: config.rs  errors.rs  html.rs  lib.rs  main.rs  pptx.rs  render.rs  resources.rs  tests.rs  utils.rs  watch.rs
tests/: end_to_end_test.rs  generate_pptx_test.rs  generate_slides_test.rs  integration_test.rs
