[package]
name = "big"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
comrak = "0.20.0"
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["blocking"] }
thiserror = "1.0.56"
headless_chrome = "1.0.17"
log = "0.4.20"
env_logger = "0.11.2"

[dev-dependencies]
tempfile = "3.9.0"
