[package]
name = "big-slides"
version = "0.1.2"
edition = "2021"
description = "A command-line tool for generating professional PowerPoint presentations from Markdown files"
license = "MIT"
authors = ["Harper Reed <harper@nata2.org>"]
repository = "https://github.com/harperreed/big-rs"
homepage = "https://github.com/harperreed/big-rs"
documentation = "https://docs.rs/big-slides"
readme = "README.md"
keywords = ["presentation", "markdown", "powerpoint", "slides", "cli"]
categories = ["command-line-utilities", "multimedia", "text-processing"]
rust-version = "1.70"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
comrak = "0.20.0"
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["blocking"] }
thiserror = "1.0.56"
headless_chrome = "1.0.17"
log = "0.4.20"
env_logger = "0.11.2"
quick-xml = "0.31.0"
zip = "0.6.6"
image = "0.24.9"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.34"
glob = "0.3.1"
notify = "6.1.1"
notify-debouncer-full = "0.3.1"
tiny_http = "0.12.0"
tungstenite = "0.21.0"
url = "2.4.1"
parking_lot = "0.12.1"

[dev-dependencies]
tempfile = "3.9.0"
